common-lisp-controller (3.66) unstable; urgency=low

  * Fixed error reporting script: forgot a `. 

 -- Peter Van Eynde <pvaneynd@debian.org>  Tue, 17 Jun 2003 01:52:49 +0200

common-lisp-controller (3.65) unstable; urgency=low

  * Implement a work-round for the user-adduser-in-postrm
    problem. Thanks to Thomas Viehmann. Closes: #192297
  * Improves error reporting script again.
  * Fixed declaration of system-directory in add-project-directory.
    Closes: #193611
  * We fixed lisp-config in version 3.62. Closes: #195420

 -- Peter Van Eynde <pvaneynd@debian.org>  Fri, 13 Jun 2003 06:27:09 +0200

common-lisp-controller (3.64) unstable; urgency=low

  * add check for possible errors from asdf::resolve-symlinks

 -- Kevin M. Rosenberg <kmr@debian.org>  Wed, 28 May 2003 15:37:14 -0600

common-lisp-controller (3.63) unstable; urgency=low

  * Improve user packages support: add symbolic links to ~/.clc/systems;
  add this directory to ASDF's search function list
  * Remove multiline strings for gcc-3.3 (closes:194886)
  
 -- Kevin M. Rosenberg <kmr@debian.org>  Tue, 27 May 2003 10:35:55 -0600

common-lisp-controller (3.62) unstable; urgency=low

  * Removed /etc/lisp-config.lisp as it is generated at config time.
    Closes: #188065
  * Don't forget to remove the file on purge of course :-).
  * There _is_ a problem with xinetd, see bug #176464, so
    the conflict is here to stay for the moment :-).
    Closes: #162171

 -- Peter <pvaneynd@debian.org>  Thu,  8 May 2003 23:29:27 +0200

common-lisp-controller (3.61) unstable; urgency=low

  * Check that comp-dir is at least as long as root dir in 
  beneath-source-root?
  * Minor typo correction in templates
 1G 
 -- Kevin M. Rosenberg <kmr@debian.org>  Thu, 24 Apr 2003 22:26:23 -0600

common-lisp-controller (3.60) unstable; urgency=low

  * register-common-lisp-implementation: Rebuild .asd-based packages
  are rebuilt as well as .system packages.
